# Fast_api_tutorial

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sample.env
.github/: .CODEOWNERS
.github/workflows/: docker-image.yml
api/: weather_api.py
constants/: abbriviations.py
db/: fake_db.py
infrastructure/: weather_cache.py
models/: auth.py  location.py  validation_error.py
security/: auth.py  constant.py  token.py  user.py
services/: openweather_service.py
templates/shared/: layout.html
views/: home.py
